<?xml version="1.0"?>
<package format="2">
  <name>biospherical_par_sensor</name>
  <version>0.0.0</version>
  <description>Nodes to interface with PAR sensor</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
